data/collection/fixes/descriptions/scala/scala-10117
The following used to work in 2.11.8:


```scala
$ scala-2.12.1/bin/scala
Welcome to Scala 2.12.1 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_102).
Type in expressions for evaluation. Or try :help.

scala> :paste
// Entering paste mode (ctrl-D to finish)

import scala.language.higherKinds

case class Const[A, B](value: A)

trait Foo[F[_], A]
case class Bar[F[_]]() extends Foo[F, Unit]

def f[F[_], A](foo: Foo[F, A]): Unit = foo match {
  case Bar() => Const[Unit, F[Unit]](()).value
}

// Exiting paste mode, now interpreting.

<console>:19: error: F does not take type parameters
         case Bar() => Const[Unit, F[Unit]](()).value
                                   ^

scala> 
```